--- a/package.json
+++ b/package.json
@@ -18,8 +18,13 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "chart.js": "^2.7.1",
+    "chartkick": "^2.2.4",
     "express": "^4.16.2",
     "vue": "^2.5.2",
+    "vue-chartjs": "^3.0.2",
+    "vue-chartkick": "^0.2.0",
+    "vue-charts": "^0.2.1",
     "vue-material": "^1.0.0-beta-7",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
